<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_CommonData" Id="{cf0974a8-7b75-0485-0608-2eb2da826506}">
    <Declaration><![CDATA[TYPE ST_CommonData :
STRUCT
	itfLogger				: ITF_BaseLogger;
	itfBaseTime				: ITF_BaseTime;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>