<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ElementIdentifier" Id="{a640e5c6-59c4-4947-8e18-94accbba0643}">
    <Declaration><![CDATA[{attribute 'global_init_slot' := '40501'} 
TYPE ST_ElementIdentifier :
STRUCT
	stName					: ST_Label;
	sCode					: STRING;		//unikalny kod elementu w postaci X.X.X
	uiID					: UINT;			//unikalny numer elementu
	eType					: E_ElementType;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>