<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_BaseComponent" Id="{87e0f050-2d49-0545-1d2d-1d8cc43d61c2}" SpecialFunc="None">
    <Declaration><![CDATA[(*			
	RAFALOS
	Rafał Osajda		19.09.2025		TC 4024.66
	Komponent bazowy dla elementów prostych
*)
FUNCTION_BLOCK FB_BaseComponent EXTENDS FB_BaseLoggerElement IMPLEMENTS ITF_BaseComponent, ITF_BaseComponent_HMI_Connector
VAR
	fbReset						: FB_BaseCommand;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{f6b4fcc3-c3c0-0af2-28d1-79ccbb610da2}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.stIdentifier.eType			:= E_BaseElementType.eComponent;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="FirstCycle" Id="{59d66408-2df1-04a5-240d-93e8399a3b7e}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		03.10.2025		TC 4024.66
	
*)
METHOD PUBLIC FirstCycle : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FirstCycle				:= SUPER^.FirstCycle ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="JoinTheLogger" Id="{c36b1ddd-e3f3-0707-2e1b-24a85c94c962}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		07.10.2025		TC 4024.66
	Dodpisywanie się do listy logera
*)
METHOD PUBLIC JoinTheLogger : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF (THIS^.bIsValidCommonData) THEN
	IF (THIS^.refstCommonData.itfLogger.AddItem (itfItem := THIS^) > 0 ) THEN
		JoinTheLogger		:= TRUE;
	END_IF
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>